# burrow

./: .gitignore  AGENTS.md  CLAUDE.md  MODIFIERS.md  README.md  examples  index.html  lefthook.yml  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts  worktrees.json
.claude/: settings.json
.claude/agents/: security-reviewer.md
.claude/hooks/: block-dep-edits.sh  rustfmt-on-save.sh
.claude/skills/new-command/: SKILL.md
.claude/skills/tdd-cycle/: SKILL.md
.codex/skills/new-command/: SKILL.md
.codex/skills/tdd-cycle/: SKILL.md
e2e/: chat.spec.ts  codex-output.spec.ts  edge-cases.spec.ts  global-teardown.ts  health.spec.ts  icons.spec.ts  launcher.spec.ts  modifier-keys.spec.ts  settings.spec.ts  special.spec.ts
scripts/: clone-examples.sh  install.sh  playwright-config.mjs  playwright-config.test.mjs  portless-dev.mjs  portless-resolver.mjs  portless-url.mjs  portless.test.mjs  tauri-helpers.mjs  tauri.mjs  tauri.test.mjs
src/: App.tsx  CodexOutputView.css  CodexOutputView.tsx  OutputView.css  OutputView.tsx  category-icons.tsx  main.tsx  mock-tauri.ts  styles.css  types.ts  useAutoScroll.ts  useOutputPolling.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: chat.rs  config.rs  context.rs  dev_server.rs  icons.rs  indexer.rs  lib.rs  logging.rs  main.rs  ollama.rs  output_buffers.rs  process_timeout.rs  router.rs  text_extract.rs  window_manager.rs
src-tauri/src/actions/: dry_run.rs  handlers.rs  mod.rs  modifier.rs  output_window.rs  utils.rs
src-tauri/src/cli/: mod.rs  output.rs  progress.rs  runner.rs
src-tauri/src/commands/: apps.rs  chat.rs  files.rs  health.rs  history.rs  math.rs  mod.rs  onepass.rs  onepass_vault.rs  settings.rs  special.rs  ssh.rs  vectors.rs
src-tauri/src/daemon/: client.rs  handlers.rs  mod.rs  pid.rs  socket.rs
src-tauri/tests/: config_integration.rs  indexer_integration.rs  router_integration.rs  vector_db_integration.rs
