[package]
name = "burrow"
version = "0.1.0"
description = "A fast application launcher for Linux"
authors = ["beasty"]
edition = "2021"

[lib]
name = "burrow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nucleo = "0.5"
rusqlite = { version = "0.38", features = ["bundled"] }
dirs = "6"
freedesktop_entry_parser = "2"
glob = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "process"] }
toml = "0.9"
reqwest = { version = "0.13", features = ["json"] }
walkdir = "2"
pdf-extract = "0.10"
calamine = "0.32"
zip = "7"
mexe = "0.2.0"
tempfile = "3"

[dev-dependencies]
tempfile = "3"
