[package]
name = "burrow"
version = "0.1.0"
description = "A fast application launcher for Linux"
authors = ["beasty"]
edition = "2021"

[lib]
name = "burrow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nucleo = "0.5"
rusqlite = { version = "0.38", features = ["bundled"] }
dirs = "6"
freedesktop_entry_parser = "2"
glob = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "process"] }
toml = "0.9"
reqwest = { version = "0.13", features = ["blocking", "json"] }
walkdir = "2"
pdf-extract = "0.10"
calamine = "0.32"
zip = "7"
mexe = "0.2.0"
aisdk = { version = "0.4.0", features = ["openrouter", "openaichatcompletions"] }
tempfile = "3"
wait-timeout = "0.2"
freedesktop-icons = "0.4.0"
base64 = "0.22.1"
axum = "0.8.8"
tower-http = { version = "0.6.8", features = ["cors"] }
tauri-plugin-single-instance = "2.3.7"
zeroize = { version = "1.8.2", features = ["derive"] }
url = "2.5.8"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-appender = "0.2.4"
clap = { version = "4", features = ["derive", "color", "wrap_help"] }
indicatif = "0.17"
console = "0.15"

[dev-dependencies]
tempfile = "3"
