[package]
name = "burrow"
version = "0.1.0"
description = "A fast application launcher for Linux"
authors = ["beasty"]
edition = "2021"
default-run = "burrow"

[lib]
name = "burrow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nucleo = "0.5"
rusqlite = { version = "0.38", features = ["bundled"] }
dirs = "6"
freedesktop_entry_parser = "2"
glob = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "process"] }
toml = "0.9"
reqwest = { version = "0.13", features = ["blocking", "json"] }
walkdir = "2"
pdf-extract = "0.10"
calamine = "0.32"
zip = "7"
mexe = "0.2.0"
aisdk = { version = "0.4.0", features = ["openrouter", "openaichatcompletions"] }
tempfile = "3"
wait-timeout = "0.2"
freedesktop-icons = "0.4.0"
base64 = "0.22.1"
axum = "0.8.8"
tower-http = { version = "0.6.8", features = ["cors"] }
tauri-plugin-single-instance = "2.3.7"
zeroize = { version = "1.8.2", features = ["derive"] }
url = "2.5.8"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-appender = "0.2.4"
clap = { version = "4", features = ["derive", "color", "wrap_help"] }
indicatif = "0.17"
console = "0.15"
hyper-util = { version = "0.1.20", features = ["tokio"] }
hyper = { version = "1.8.1", features = ["client", "http1"] }
http-body-util = "0.1.3"
libc = "0.2.180"
ctrlc = "3.5.1"
dialoguer = { version = "0.12.0", features = ["fuzzy-select"] }

[[bin]]
name = "test-server"
path = "src/bin/test_server.rs"

[dev-dependencies]
tempfile = "3"
